# virtughan-qgis-plugin

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  __init__.py  build.sh  generate_metadata.py  main.py  processing_provider.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
engine/: engine_logic.py
extractor/: extractor_logic.py  extractor_widget.py
tests/: test_basic.py  test_ci.py  test_modules.py  test_package.py
virtughan_qgis/: bootstrap.py  main_plugin.py  metadata.txt  processing_provider.py
virtughan_qgis/common/: aoi.py  common_form.ui  common_logic.py  common_widget.py  hub_dialog.py  map_setup.py
virtughan_qgis/engine/: engine_form copy.ui  engine_form.ui  engine_logic.py  engine_widget copy.py  engine_widget.py
virtughan_qgis/extractor/: extractor_form.ui  extractor_logic.py  extractor_widget.py
virtughan_qgis/tiler/: api.py  tiler_form.ui  tiler_logic.py  tiler_logic_test.py  tiler_widget.py
